# P2P-File-Sharing-

./: .gitignore  CMakeLists.txt  README.md  app  app.cpp  dh_helper.h  discovery.h  main.cpp  mark3  p2p_client  p2p_client.cpp  received_testfile.txt  receiver  receiver.cpp  receiver_final  receiver_final.cpp  secret.txt  secure_receiver  sender  sender_dh  sender_dh.cpp  sender_final  signal_server.cpp  singal_server
FileTransfer/: receiver_dh
MARK8/: CMakeLists.txt  Requirements.txt  client.cpp  main.cpp  signal_server.cpp
MARK87_Ultimate/: Mark87  install.sh
MARK9/: CMakeCache.txt  Makefile  cmake_install.cmake  file_structs.hpp  receiver  receiver.cpp  sender  sender.cpp
Prototypes /: secure_receiver.cpp  secure_sender  secure_sender.cpp  sender.cpp  sender_final.cpp
Version 1/: receiver_dh.cpp
ignore/: .gitignore  app2.cpp
ignore/received_files/: Directions.pptx
